fix contrast of nav cards

--- a/_sass/_bootstrap_variables.scss
+++ b/_sass/_bootstrap_variables.scss
@@ -7,7 +7,7 @@ $light-orange: #fee1c8;
 $light: #f2f5f7;
 $light-x: #9bcbdd;
 $dark-blue: #023452;
-$light-blue: #9acbdd;
+$light-blue: #b3d8e5;
 
 /*-----Custom values for Bootstrap variables-----*/
 $component-active-bg: $blue;
