--- a/_sass/_custom_classes.scss
+++ b/_sass/_custom_classes.scss
@@ -125,8 +125,8 @@ section#search-section {
 }
 
 .navigation-tiles .card button:hover {
-    background-color: $light-blue !important;
-    color: $light !important;
+    background-color: $light-orange !important;
+    color: $dark-blue !important;
 }
 
 .navigation-tiles .card .card-header a {
